--- a/CIC(Container Infrastructure Configuration)/20250611_13.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250611_13.쿠버네티스.md
@@ -401,7 +401,7 @@ kubectl create deployment nginx --image=nginx
 
 → 이후 Prometheus 웹 UI에 접속하여 NGINX 등 모니터링 대상을 확인할 수 있음
 
-쿼리 입력기에 'container_memory_usage_bytes{container="nginx"} dlqfur
+쿼리 입력기에 'container_memory_usage_bytes{container="nginx"} 입력
 
 'Excute'클릭하고 약 1분 ~ 2분 그냥 기다린다.
 'Element' 하단에 쿼리에 대한 응답이 출력된다.
