--- a/CIC(Container Infrastructure Configuration)/20250612_17.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250612_17.쿠버네티스.md
@@ -66,4 +66,6 @@ $Namespace Namespace Metrics
 
 ![](./img/20250612.img/0022.png)
 
+![](./img/20250612.img/0023.png)
+
 ### Step 8. 각 Panel들의 타이틀을 누른 상태로 크기를 조절하면서 이동하고 위치를 지정하면 된다.
