--- a/CIC(Container Infrastructure Configuration)/20250612_18.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250612_18.쿠버네티스.md
@@ -1,1 +1,13 @@
 # 지속적인 통합과 배포 자동화 (CI/CD, Jenkins)
+
+## Pipeline(파이프라인)
+- 'Container'로 구동하는 'Application'을 배포하는 '가장 효율적인 진행 과정'을 말한다.
+- 기존에는 'Pipeline'을 사람이 수작업을 통해 진행했었고 이제는 도구를 사용해서 자동화할 수가 있다.
+
+## 'kubenetes' 에서의 진행 과정
+- docker build
+    - 'GitHub' 등의 저장소에 저장해 둔 Application 소스 코드를 내려 받아 Docker Container Image로 Build 한다. 즉, 'Docker Image'로 만들어서 사용할 수 있게 해주기 위한 것을 말한다.
+    
+- docker push
+- kubectl create
+- docker expose
