--- a/CIC(Container Infrastructure Configuration)/20250612_18.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250612_18.쿠버네티스.md
@@ -1,13 +1,67 @@
-# 지속적인 통합과 배포 자동화 (CI/CD, Jenkins)
+> 📦 **지속적인 통합과 배포 자동화 (CI/CD, Jenkins)**
 
-## Pipeline(파이프라인)
-- 'Container'로 구동하는 'Application'을 배포하는 '가장 효율적인 진행 과정'을 말한다.
-- 기존에는 'Pipeline'을 사람이 수작업을 통해 진행했었고 이제는 도구를 사용해서 자동화할 수가 있다.
+---
 
-## 'kubenetes' 에서의 진행 과정
-- docker build
-    - 'GitHub' 등의 저장소에 저장해 둔 Application 소스 코드를 내려 받아 Docker Container Image로 Build 한다. 즉, 'Docker Image'로 만들어서 사용할 수 있게 해주기 위한 것을 말한다.
-    
-- docker push
-- kubectl create
-- docker expose
+## ✅ Pipeline(파이프라인)
+- 'Container'로 구동하는 'Application'을 배포하는 **가장 효율적인 진행 과정**을 의미함
+- 기존에는 파이프라인을 사람이 **수작업**으로 진행했으나, 이제는 **자동화 도구(Jenkins 등)**를 통해 처리 가능
+
+---
+
+## ⚙️ Kubernetes에서의 진행 과정
+
+1. **docker build**
+   - GitHub 등의 저장소에서 Application 소스코드를 받아 **Docker Image**로 빌드
+   - → 즉, Docker Container Image 생성
+
+2. **docker push**
+   - 빌드된 Docker Image를 **레지스트리(Registry)**에 등록
+   - → Kubernetes에서 사용할 수 있게 준비
+
+3. **kubectl create**
+   - 레지스트리에 등록된 이미지를 바탕으로 **Kubernetes Object** 생성
+
+4. **docker expose**
+   - 생성된 Object를 외부에서 접속 가능하도록 **Service 형태로 노출**
+
+---
+
+## 🔁 CI/CD 정의
+
+- **CI (Continuous Integration, 지속적 통합)**  
+  개발자가 코드 변경 시, 이를 자동으로 **빌드하고 테스트하여 문제를 조기에 발견**
+
+- **CD (Continuous Deployment, 지속적 배포)**  
+  CI로 신뢰성 있게 검증된 애플리케이션을 **운영 환경에 자동 배포**  
+  → 실수를 줄이고 배포 시간도 최소화
+
+- CI와 CD를 통합해서 **CI/CD**라고 하며,  
+  **자동화된 애플리케이션 통합 및 배포 파이프라인을 구성**하는 핵심 개념임
+
+---
+
+## 🧱 컨테이너 인프라 환경에서의 CI/CD
+
+### 🟩 개요
+
+- **CI**  
+  - 코드를 커밋 → 빌드 및 테스트  
+  - 정상 동작하는지 반복 검증  
+  - → **애플리케이션의 신뢰성을 높임**
+
+- **CD**  
+  - CI 과정을 통과한 **신뢰할 수 있는 애플리케이션**을  
+    자동으로 상용 환경에 배포  
+  - 사전 정의된 배포 전략을 통해  
+    **실수 줄이고 시간 단축**
+
+### 과정
+- '개발자가 소스를 커밋하고 푸시하면 CI 단계로 들어간다.'
+- CI 단계에서는 'Application'이 자동으로 빌드되고 테스트를 거쳐 배포할 수 있는 'Application인지를 확인한다.
+- 테스트를 통과하면 신뢰할 수 있는 Application으로 간주하고 CD 단계로 넘어간다.
+- CD 단계에서는 Application을 컨테이너 이미지로 만들어서 Pod, Deployment, StatFllSet 등 다양한 Object 조건에 맞춰 설정한 파일을 통해 배포한다. 
+
+## Jenkins (젠킨스) 
+- 사용자가 직접 'UI'에서 작업을 구성하거나 작업 순서를  코드로 정의할 수 있다.
+- 특정 언어나 환경에 구애받지 않고 범용적인 목적으로 사용한다. 
+
