--- a/CIC(Container Infrastructure Configuration)/20250612_18.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250612_18.쿠버네티스.md
@@ -65,3 +65,41 @@
 - 사용자가 직접 'UI'에서 작업을 구성하거나 작업 순서를  코드로 정의할 수 있다.
 - 특정 언어나 환경에 구애받지 않고 범용적인 목적으로 사용한다. 
 
+## 'Jenkins' 로 쿠버네티스 운영 환경 개선하기
+
+- **개발 집중**  
+  → 애플리케이션 배포 영역에 쿠버네티스를 사용하면, 개발자는 배포 환경을 신경 쓰지 않고 오로지 애플리케이션 개발에만 집중할 수 있음.
+
+- **환경 차이에 따른 수정 부담 감소**  
+  → 기존에는 환경이 서로 다른 시스템에 애플리케이션을 배포할 경우, 개발자가 환경에 맞게 코드를 수정해야 했음.
+
+- **자동화된 배포**  
+  → 모든 배포 환경을 컨테이너 인프라로 통일하고 CI/CD 도구를 사용하면, 애플리케이션에 맞는 환경을 자동으로 적용하여 배포할 수 있음.
+
+- **일관된 배포 환경 제공**  
+  → 통합 과정에서 생성된 컨테이너 이미지를 기반으로, 쿠버네티스가 존재하는 어떤 환경에서도 동일한 방식으로 애플리케이션을 배포할 수 있음.
+---
+- 동적인 변경 사항을 간편하고 빠르게 적용할 수 있도록 도와주는 도구들이 2가지 있는데
+
+'kustomize(커스토마이즈)', 와 'Helm(헬름)' 2가지가 있는데 이 도구들을 이용해서 'Jenkins'를 설치한다.
+
+## 'Jenkins' 설치를 위한 간편화 도구
+- 배포 도구 비교
+  - kubectl
+  - kustomize
+  - helm
+- 설명
+
+## 쿠버네티스 배포 도구 비교
+
+| 항목            | kubectl                                                  | kustomize                                                                 | Helm                                                                 |
+|-----------------|----------------------------------------------------------|---------------------------------------------------------------------------|----------------------------------------------------------------------|
+| **기본 개요**     | 쿠버네티스 기본 CLI 도구                                 | 야믈 파일을 유동적으로 조합해 배포                                        | 패키지 형태의 차트(chart)로 애플리케이션 배포                       |
+| **설치 필요 여부** | 기본 포함 (추가 설치 불필요)                              | 별도 실행 파일 사용 가능 (kubectl에 -k 옵션으로도 사용 가능)               | 별도 설치 필요 (helm CLI 설치)                                       |
+| **배포 방식**     | 매니페스트(야믈) 파일 기반 개별 오브젝트 배포             | 디렉터리 기반 커스터마이징 구성 사용                                     | Helm 차트 패키지 기반 일괄 배포                                      |
+| **템플릿/변수 기능**| 없음 (파일 그대로 배포)                                  | 변수나 템플릿은 사용하지 않음<br>※ ConfigMap/Secret 생성은 지원         | 자체 템플릿 문법과 변수 지원                                        |
+| **유연성**        | 낮음 (정적인 배포 중심)                                  | 중간 (같은 매니페스트에 여러 설정 적용 가능)                              | 높음 (다양한 환경/설정에 맞는 배포 가능)                           |
+| **대표 특징**     | 단순, 명확, 직접적인 관리에 적합                           | 환경에 따른 설정 변경에 유리                                              | 배포 자동화, 재사용성, 설정 다양화에 강력함                         |
+| **활용도/인기**   | 기본 도구로 대부분 사용                                   | 구성 복잡도 증가 시 사용                                                  | 사용자 70% 이상 사용, 매우 보편적                                   |
+
+
