--- a/CIC(Container Infrastructure Configuration)/20250613_19.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250613_19.쿠버네티스.md
@@ -106,8 +106,8 @@ No resources found in default namespace.
 ![](./img/20250613.img/0010.png)
 
 ```
-kubectl create deploymnet echo-ip --image=sysnet4admin/echo-ip
-kubectl expose deploymnet echo-ip --type=LoadBalancer --port=80
+kubectl create deployment echo-ip --image=sysnet4admin/echo-ip
+kubectl expose deployment echo-ip --type=LoadBalancer --port=80
 ```
 ## Step 12. 'Host OS'의 웹 브라우저를 통한 'echo-ip' 응답 내용 확인
 
