--- a/CIC(Container Infrastructure Configuration)/20250614_20.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250614_20.쿠버네티스.md
@@ -88,3 +88,6 @@ kubectl get service echo-ip
 
 ![](./img/20250613.img/0020.png)
 
+## Step 13. 'MetalLB'만 남기고 'echo-ip' 오브젝트 관련 내용 모두 삭제한다.
+
+![](./img/20250613.img/0021.png)
