--- a/CIC(Container Infrastructure Configuration)/20250616_24.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250616_24.쿠버네티스.md
@@ -66,3 +66,34 @@ kubectl expose deployment fs-echo-ip --type=LoadBalancer --name=fs-echo-ip-svc -
 - 작업이 정상적으로 종료되었다면 파란색이 나오는데 작업이 실패하면 빨간색으로 나온다.
 
 ![](./img/20250616.img/0020.png)
+
+![](./img/20250617.img/0001.png)
+
+![](./img/20250617.img/0002.png)
+
+![](./img/20250617.img/0003.png)
+
+![](./img/20250617.img/0004.png)
+
+![](./img/20250617.img/0005.png)
+
+![](./img/20250617.img/0006.png)
+
+![](./img/20250617.img/0007.png)
+
+![](./img/20250617.img/0008.png)
+
+![](./img/20250617.img/0009.png)
+
+```
+yum install docker-ce docker-ce-cli containerd.io
+```
+
+![](./img/20250617.img/0010.png)
+도커 데몬 시작
+```
+[root@m-k8s ~]# sudo systemctl enable docker
+Created symlink from /etc/systemd/system/multi-user.target.wants/docker.service to /usr/lib/systemd/system/docker.service.
+[root@m-k8s ~]# sudo systemctl start docker
+```
+![](./img/20250617.img/0011.png)
