--- a/Terraform/20250618.terraform02.md
+++ b/Terraform/20250618.terraform02.md
@@ -327,4 +327,10 @@ resource "aws_instance" "app_server" {
 ![](./img/20250618/0035.png)
 
 # 실습 4. Local File로 접속 및 저장, VPC 모듈화, Access_Key 자동인식
-- 기본 사용법
+- 기본 사용법('교재 Chapter 3.' 참고)
+### fmt (format)
+- 소스코드의 내용을 보기 좋게 정렬한다. 즉, 블럭안에 들여쓰기가 적용된다. 이 때 'main.tf'가 출력된다면 정렬이 되었다는 것이다.
+
+- 이미 정렬된 소스라면 변화가 없다.이 때는 명령 실행 후 하단에 'main.tf'가 출력 x
+
+![](./img/20250618/0036.png)
