--- a/Terraform/20250619.terraform04.md
+++ b/Terraform/20250619.terraform04.md
@@ -153,7 +153,7 @@ provider "aws" {
 
 - 'aws configure' 명령이 Terraform 파일보다 우선권을 가진다.
 
-## 'Terraform' 으로 'VPC' 생성하기
+## 'Terraform' 으로 'VPC' 생성하기  -- 예제파일 main-vpc.tf
 
 ![](./img/20250619/0012.png)
 
