terraform aws ec2_vpc_subnet

--- a/Terraform/20250619.terraform04.md
+++ b/Terraform/20250619.terraform04.md
@@ -129,7 +129,7 @@ module "ec2_instance" {
 
 ![](./img/20250619/0010.png)
 
-
+# 실습 1. 'Terraform'으로 'VPC', 'Subnet' 'IGW', 'Routing' 생성
 ### pwd = /sdb/Terraform/main.tf
 ```
 terraform{
