--- a/Terraform/20250620.terraform06.md
+++ b/Terraform/20250620.terraform06.md
@@ -58,14 +58,15 @@ sudo apt install apache2
 - 작업 개요
    - Step 1. 'VM 
       - (CentOS 7.9.2207)' 
-      - 외부망 통신 가능하게 설정 (NAT / 192.168.10.132 / C Class / 192.168.2 / 192.168.2)
+      - 외부망 통신 가능하게 설정 (NAT / 192.168.10.132 / C Class / 192.168.10.132 / 192.168.10.132)
    - Step 2. 'Local Web Server' 구축
       - (CentOS 7.9.2207)' 
       - DNS Server
+         - 'samadal.com'
          - Package 설치
          - 각종 설정
          - 기본 경로 변경
-      - Web SErver
+      - Web Server
          - 'www.samadal.com'
          - Package 설치
          - 기본 경로 변경
