--- a/Terraform/20250623.terraform08.md
+++ b/Terraform/20250623.terraform08.md
@@ -308,7 +308,7 @@ variable "server_port" {
         - 이 코드는 속성 참조를 다시 사용하는데 'aws_instance' 리소스의 'public_ip' 속성을 참조
 
         ```
-         output "pubhlic_ip" {
+         output "public_ip" {
                 value = aws_instance.example.public_ip
                 description = "The public IP address of the wbe Server"
          }
