--- a/Terraform/20250623.terraform09.md
+++ b/Terraform/20250623.terraform09.md
@@ -66,5 +66,96 @@ resource "aws_launcher_group" "example" {
             echo "Hello, World!" < index.html
             nohup busybox httpd -f -p ${var.server_port} &
             EOF
-```
 }
+```
+
+### 📌 `subnet_ids`란?
+- Auto Scaling Group(ASG)이 EC2 인스턴스를 배포할 **VPC 내의 서브넷**을 지정하는 매개변수.
+- 서브넷은 각각 AWS **가용 영역(AZ)**에 위치하므로, **여러 서브넷에 배포**하면 일부 데이터 센터 중단 시에도 서비스 지속 가능.
+
+---
+
+### 📌 하드코딩 vs 데이터 소스
+- 서브넷 ID를 **하드코딩**하면 유지 관리가 어렵고 이식성이 낮음.
+- 대신, **데이터 소스**를 사용해 서브넷 목록을 자동으로 가져오는 것이 좋음.
+
+---
+
+### 📌 데이터 소스란?
+- `Terraform` 실행 시, 공급자(AWS 등)로부터 가져오는 **읽기 전용 정보**.
+- **리소스를 생성하지 않음** (단순 조회 목적).
+- 각 공급자(provider)는 다양한 데이터 소스를 제공함:
+  - VPC 정보
+  - 서브넷 정보
+  - AMI ID
+  - IP 주소 범위
+  - 사용자 자격 증명 등
+
+---
+
+### 📌 데이터 소스 구문
+
+```hcl
+data "<PROVIDER>_<TYPE>" "<NAME>" {
+  [CONFIG...]
+}
+```
+
+- `PROVIDER`: 공급자 이름 (예: aws)
+- `TYPE`: 데이터 소스 유형 (예: vpc)
+- `NAME`: 참조에 사용할 식별자
+- `CONFIG`: 검색 필터 등 설정
+
+---
+
+### 📌 예시: 기본 VPC 데이터 가져오기
+
+```hcl
+data "aws_vpc" "default" {
+  default = true
+}
+```
+
+- 기본 VPC를 찾기 위해 `default = true` 필터 사용
+
+---
+
+### 📌 속성 참조 구문
+
+```hcl
+data.<PROVIDER>_<TYPE>.<NAME>.<ATTRIBUTE>
+```
+
+- 예: 기본 VPC의 ID 가져오기 → `data.aws_vpc.default.id`
+
+---
+
+### 📌 예시: 기본 VPC의 서브넷 ID 조회
+
+```hcl
+data "aws_subnet_ids" "default" {
+  vpc_id = data.aws_vpc.default.id
+}
+```
+
+---
+
+### 📌 예시: ASG에 서브넷 ID 지정
+
+```hcl
+resource "aws_autoscaling_group" "example" {
+  launch_configuration = aws_launch_configuration.example.name
+  vpc_zone_identifier  = data.aws_subnet_ids.default.ids
+
+  min_size = 2
+  max_size = 10
+
+  tag {
+    key                 = "Name"
+    value               = "terraform-asg-example"
+    propagate_at_launch = true
+  }
+}
+```
+
+---
