--- a/Terraform/20250624.terraform10.md
+++ b/Terraform/20250624.terraform10.md
@@ -143,6 +143,13 @@ resource "aws_route_table_association" "hmrtassociation2"{
         subnet_id = aws_subnet.hmsubnet2.id
         route_table_id = aws_route_table.hmrt.id
 }
+
+resource "aws_route" "mydefaultroute" {
+        route_table_id          = aws_route_table.hmrt.id
+        destination_cidr_block  = "0.0.0.0/0"
+        gateway_id              = aws_internet_gateway.hmigw.id
+}
+
 ```
 ![](./img/20250624/0016.png)
 
