쿠버네티스 처음부터 복습

--- a/Terraform/20250624.terraform11.md
+++ b/Terraform/20250624.terraform11.md
@@ -99,3 +99,9 @@ output "hmec2_public_ip" {
 ![](./img/20250624/0023.png)
 
 ![](./img/20250624/0024.png)
+
+삭제하기
+```
+terraform destroy
+```
+![](./img/20250624/0025.png)
