--- a/CIC(Container Infrastructure Configuration)/20250624_25.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250624_25.쿠버네티스.md
@@ -191,3 +191,62 @@ helm install metallb edu/metallb \
 ## 42. 컨테이너 이미지를 'Registry'에 등록된 내용 확인한다.
 
 ![](./img/20250624/0032.png)
+
+## 43. '5.zip' 압축해제 후 'NFS' 관련 작업을 한다.
+
+![](./img/20250624/0033.png)
+
+![](./img/20250624/0034.png)
+
+![](./img/20250624/0035.png)
+
+## 44. 생성된 디렉터리의 상태를 확인한다.
+
+![](./img/20250624/0036.png)
+
+## 45. 접근 권한 부여
+
+![](./img/20250624/0037.png)
+
+## 46. Jenkins 'PV, PVC'를 구성하고 'Bound' 상태인지 확인한다.
+
+![](./img/20250624/0038.png)
+
+
+## 47. 'PV(Persistent Volume), PVC(Persistent Volume Claim(요구))'
+
+- 데이터(Container 기반의 'Deployment Pod')를 저장하고 만약에 'Deployment Pod'가 재시작 했을 때도 데이터를 정상적으로 동작할 수 있도록 해 주는 기능
+
+
+## 48. 'Jenkins' 를 설치한다. 
+
+![](./img/20250624/0039.png)
+
+## 49. 'Jenkins'를 외부에 노출시키고 사이트에서 접속할 수 있도록 설정한다.
+
+![](./img/20250624/0040.png)
+
+![](./img/20250624/0041.png)
+
+## 50. Jenkins 사이트 출력
+http://192.168.1.11/login
+
+## 51. 'Pipeline Project' 생성을 위한 'Item' 추가
+- 'Jenkins' 메인 화면 상단에 있는 '새로운 Item'을 클릭한다.
+- 'Enter an item name'에는 'dpy-pl-bulk-prod'라고 입력한다.
+- 하단에 있는 'Pipeline' 을 클릭한 후 'OK'를 클릭한다..
+
+## 52. '구성'을 설정한다.
+- 생성된 'Pipeline Project' 목록에서 'dpy-pl-bulk-prod'을 클릭한다.
+- 왼쪽에서 '구성'을 클릭한다.
+- 'General'의 하단에 있는 '이 빌드는 매개변수가 있습니다'를 체크해제한다.
+- 'Pipeline' 에서 'Definition'을 'Pipelin Script'에서 'Pipeline script from SCM'으로 변경한다.
+- SCM 으 Git 으로 변경한다.
+- Repository URL 에 'https://github.com/iac-source/echo-ip'를 입력한다.
+- 'Branch Specifier (blank for 'any')'에서 '*/main' 으로 변경한다.
+- 하단에 있는 'Apply'와 '저장'을 순서대로 클릭한다.
+
+## 53. 'Pipeline Project'를 빌드한다.
+- 'Pipeline Project' 화면 왼쪼고에 있는 'Build Now'를 클릭한다.
+- 'Build History' 하단에 '빌드 작업 중' 형태로 막대기가 움직이는 것을 확인한다.
+- '파란색' '#1'이 출력될 때까지 기다린다.
