--- a/AWS/도움되는것.md
+++ b/AWS/도움되는것.md
@@ -88,4 +88,33 @@ AWS에서는 **Well-Architected Framework**를 활용하여 모범 사례에 따
 - 이를 통해 기업은 클라우드 환경에서 안정적이고 최적화된 서비스를 제공할 수 있음.
 
 
+# 클라우드 엔지니어
+- 1. NAT 서버구축
+- 2. VPN 연결 (openvpn)
+- 3. DNS 서버
+- 4. HAProxy 서버
+- 5. monitoring 서버
 
+## NAT
+- 퍼블릭은 퍼블릭 하고만 프라이빗은 프라이빗끼리 통신 되기 때문에 NAT게이트 웨이가 필요하다. 
+
+## VPC
+
+네트워크 카드(Network Interface Card, NIC) 1계층
+
+## 네트워크
+
+# 컴퓨팅 서비스
+## 컴퓨팅 리소스를 활용한 서비스이다.
+- CPU
+   - 프로세스(실행중인 프로그램)의 요청에을 kernel의 지시를 통해 CPU가 동작한다. 
+- Memory
+   - 물리적메모리(RAM)와 가상메모리(swap,page.sys)가 있따.
+      - 메모리의 역할: 프로세스(작업자)의 작업장
+      - 가상메모리: 디스크, 파일 (SWAP은 대기공간)
+- Disk -> 저장소 -> Block 단위 I/O를 수행한다.
+   - linux FS -> ext4, AWS FS -> xfs
+   - IOPS, MBPS -> 디스크 성능지표
+- Network -> 대역폭
+
+컴퓨터 리소스의 동작 원리
