--- a/AWS/실습/실습1.md
+++ b/AWS/실습/실습1.md
@@ -1,18 +1,18 @@
-![](./0001.png)
+![](./실습1/0001.png)
 
-![](./0002.png)
+![](./실습1/0002.png)
 
-![](./0003.png)
+![](./실습1/0003.png)
 
-![](./0004.png)
+![](./실습1/0004.png)
 
-![](./0005.png)
+![](./실습1/0005.png)
 
 ```
 cd ~
 curl -I https://aws.amazon.com/training/
 ```
-![](./0006.png)
+![](./실습1/0006.png)
 
 # 과제 9: NAT 게이트웨이를 생성하고 프라이빗 서브넷에서 라우팅 구성
 
@@ -32,37 +32,37 @@ Create NAT gateway를 선택합니다.
 ```
 
 
-![](./0007.png)
+![](./실습1/0007.png)
 
-![](./0008.png)
+![](./실습1/0008.png)
 
-![](./0009.png)
+![](./실습1/0009.png)
 
-![](./0010.png)
+![](./실습1/0010.png)
 
-![](./0011.png)
+![](./실습1/0011.png)
 
-![](./0012.png)
+![](./실습1/0012.png)
 
-![](./0013.png)
+![](./실습1/0013.png)
 
-![](./0014.png)
+![](./실습1/0014.png)
 
 # 과제 10: 프라이빗 리소스용 보안 그룹 생성
 
-![](./0015.png)
+![](./실습1/0015.png)
 
-![](./0016.png)
+![](./실습1/0016.png)
 
 # 과제 11: 프라이빗 서브넷에서 Amazon EC2 인스턴스 시작
 
-![](./0017.png)
+![](./실습1/0017.png)
 
-![](./0018.png)
+![](./실습1/0018.png)
 
-![](./0019.png)
+![](./실습1/0019.png)
 
-![](./0020.png)
+![](./실습1/0020.png)
 
 ```
 #!/bin/bash
@@ -76,13 +76,13 @@ wget  https://us-west-2-tcprod.s3.amazonaws.com/courses/ILT-TF-200-ARCHIT/v7.9.1
 unzip instanceData.zip
 
 ```
-![](./0021.png)
+![](./실습1/0021.png)
 
 # 과제 12: 프라이빗 서브넷의 Amazon EC2 인스턴스에 연결
 
-![](./0022.png)
+![](./실습1/0022.png)
 
-![](./0023.png)
+![](./실습1/0023.png)
 
 ```
 cd ~
@@ -91,14 +91,14 @@ curl -I https://aws.amazon.com/training/
 
 # (선택) 과제 1: 프라이빗 인스턴스 및 퍼블릭 인스턴스 간의 연결 문제 해결
 
-![](./0024.png)
+![](./실습1/0024.png)
 ```
 curl PRIVATE_IP
 ```
 
-![](./0025.png)
+![](./실습1/0025.png)
 
-![](./0026.png)
+![](./실습1/0026.png)
 
-![](./0027.png)
+![](./실습1/0027.png)
 
