--- a/AWS/20250630.md
+++ b/AWS/20250630.md
@@ -32,3 +32,56 @@ sns -> 알림 서비스
 awsbedrock 
 
 argoCD 배포 도구
+```
+
+```
+몽 + 몽(마스터)        몽(슬래이브)   + monstache ---- 엘라스틱 서치
+분리
+
+RDS(mysq., mariadb, postgresql)
+
+------------------------------------
+
+Redis(in-memory)
+mongoDB(documnetDB)
+Elasticsearch(검색엔진)
+Prometheus(시계열)
+```
+
+memory vs. cache vs. buffer 차이점?
+
+| 구분        | Memory (메모리)                            | Cache (캐시)                                  | Buffer (버퍼)                      |
+| --------- | --------------------------------------- | ------------------------------------------- | -------------------------------- |
+| **정의**    | 컴퓨터가 데이터를 저장하고 즉시 접근하기 위한 주 저장 공간 (RAM) | 속도 차이를 줄이기 위해 자주 사용하는 데이터를 임시 저장하는 고속 저장 공간 | 데이터 전송 시 속도 차이를 완충하기 위한 임시 저장 공간 |
+| **목적**    | CPU가 실행 중인 프로그램 및 데이터를 저장               | CPU와 메모리, 디스크 간의 처리 속도 차이 보완                | 데이터 송수신 시 순간적인 처리 속도 차이 조율       |
+| **위치**    | 주로 RAM                                  | CPU 내부, 메모리 또는 디스크 근처                       | 메모리, 디스크, 네트워크 장비 등 다양한 위치       |
+| **속도**    | 상대적으로 빠름                                | 매우 빠름 (CPU 레지스터와 가까움)                       | 상대적으로 느릴 수 있음                    |
+| **예시**    | 실행 중인 프로그램, 데이터베이스의 데이터                 | 브라우저 캐시, CPU L1/L2/L3 캐시                    | 파일 복사 시 버퍼, 네트워크 송수신 버퍼          |
+| **주요 기능** | 저장 및 즉각적인 접근                            | 반복 접근 속도 향상                                 | 데이터 손실 방지 및 속도 맞춤                |
+
+# SAN vs. DAS vs. NAS 비교
+
+| 구분 | DAS (Direct Attached Storage) | NAS (Network Attached Storage) | SAN (Storage Area Network) |
+|------|-------------------------------|-------------------------------|----------------------------|
+| 정의 | 서버에 직접 연결된 저장장치 | 네트워크를 통해 파일을 공유하는 저장장치 | 고속 전용 네트워크로 연결된 스토리지 시스템 |
+| 접근 방식 | 디스크 수준 (Block 단위) | 파일 수준 (File 단위) | 디스크 수준 (Block 단위) |
+| 연결 방식 | 서버에 직접 SCSI, SATA, USB 등으로 연결 | TCP/IP 네트워크 (이더넷)로 연결 | 전용 스토리지 네트워크 (Fibre Channel, iSCSI) 사용 |
+| 속도 | 빠름 (서버와 1:1 연결) | 비교적 느림 (일반 네트워크 사용) | 매우 빠름 (전용 네트워크 사용) |
+| 확장성 | 제한적 (서버에 의존) | 비교적 쉬움 | 매우 유연 (스토리지 풀 확장 가능) |
+| 사용 사례 | 개인용 PC, 단일 서버 | 파일 서버, 사무실 파일 공유 | 대규모 데이터 센터, 미션 크리티컬 시스템 |
+| 비용 | 저렴 | 중간 | 매우 비쌈 |
+
+
+한 줄 정리
+DAS: 내 컴퓨터에 직접 꽂는 저장장치
+
+NAS: 네트워크를 통해 파일 공유 (파일 서버 개념)
+
+SAN: 고속 전용 네트워크로 스토리지 공유 (기업용, 고성능)
+
+비유로 쉽게!
+DAS: 내 컴퓨터에 외장하드 꽂은 것
+
+NAS: 사무실에서 여러 명이 공유하는 네트워크 드라이브
+
+SAN: 기업 데이터센터에서 서버 여러 대가 고속으로 동시에 사용하는 저장소 풀
