--- a/AWS/20250701.md
+++ b/AWS/20250701.md
@@ -53,3 +53,68 @@ vpc -> 서브넷 -> ec2 ENI Ec2 (NEtwork Interface)
 
 
 # IaC (infrastructure as Code, 코드형 인프라) 
+
+# EC2 접속
+- 콘솔 -[연결]
+- putty -> *.ppk
+
+- 이것들은 이전의 것, 요즘은 SSM(awS Session Manager)을 사용함.
+```
+docker run -d --name=myweb -p 8001:80 -m=1G --cpu-shares=1024 nginx:1.27.3-alpine
+docker ps -a
+docker inspect myweb | greb -i ipaddress
+```
+
+# Kubernetes Orchestration 핵심 기능 (6가지)
+
+## 1️⃣ Service Discovery & Load Balancing (서비스 검색 및 로드 밸런싱)
+- Kubernetes는 클러스터 내에서 **Pod를 자동으로 검색**하고, **가상 IP 및 DNS 이름**으로 서비스 간 통신을 지원.
+- **로드 밸런서를 통해 트래픽을 살아있는 Pod로만 분배**.
+- **장점:** IP 관리 불필요, 자동 분산 처리.
+
+---
+
+## 2️⃣ Automated Rollouts and Rollbacks (자동 배포 및 롤백)
+- 새로운 애플리케이션 버전 배포 시, Kubernetes가 **점진적 업데이트를 진행**.
+- 문제가 발생하면 **자동으로 롤백 가능**.
+- **장점:** 무중단 배포, 안정성 확보.
+
+---
+
+## 3️⃣ Self-Healing (자체 복구)
+- 장애가 발생한 Pod를 Kubernetes가 **자동으로 재시작 또는 대체**.
+- **장점:** 시스템이 스스로 복구하여 서비스 안정성 유지.
+
+---
+
+## 4️⃣ Automatic Bin Packing (자동 최적 자원 할당)
+- Kubernetes가 CPU, 메모리 등 **노드 자원 사용량을 고려해 Pod를 자동 배치**.
+- **장점:** 리소스 낭비 최소화, 효율적인 클러스터 운영.
+
+---
+
+## 5️⃣ Storage Orchestration (스토리지 오케스트레이션)
+- Kubernetes가 로컬, 클라우드, 네트워크 스토리지 등 **다양한 스토리지를 자동으로 연결**.
+- 필요 시 **스토리지 자동 프로비저닝 지원**.
+- **장점:** 스토리지 확장 및 관리 용이.
+
+---
+
+## 6️⃣ Secret and Configuration Management (시크릿 및 설정 관리)
+- 비밀번호, API 키, 환경변수 등 **민감 정보를 안전하게 저장 및 관리**.
+- Pod에 **애플리케이션 재배포 없이 시크릿을 안전하게 주입 가능**.
+- **장점:** 보안성 강화, 설정 관리 간소화.
+
+---
+
+# ✅ 핵심 요약
+
+| 기능 | 설명 |
+|------|------|
+| Service Discovery & Load Balancing | Pod 검색 및 트래픽 자동 분배 |
+| Automated Rollouts and Rollbacks | 무중단 배포 및 자동 복구 |
+| Self-Healing | 장애 발생 시 자동 재시작 및 복구 |
+| Automatic Bin Packing | 리소스 최적화 배치 |
+| Storage Orchestration | 스토리지 자동 관리 |
+| Secret and Configuration Management | 민감 데이터 안전 관리 |
+
